--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "^5.4.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "morgan": "^1.10.0",
     "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
