--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.18",
     "@types/morgan": "^1.9.9",
     "bcryptjs": "^3.0.2",
     "chalk": "^5.4.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-jwt": "^8.5.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.23"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
